--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "circt"]
 	path = circt
-	url = https://github.com/Lord-of-the-RISCs/circt
+	url = https://github.com/Lord-of-the-RISCs/circt.git
 [submodule "yosys"]
 	path = yosys
-	url = https://github.com/YosysHQ/yosys.git
+	url = https://github.com/Lord-of-the-RISCs/yosys.git
 [submodule "spechls-circt"]
 	path = spechls-circt
 	url = https://github.com/Lord-of-the-RISCs/spechls-circt.git
